ModuleFinder.ofSystem() failing with exploded build + security manager